fix model component
